<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/com.cnpc.complexapp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_information_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/information_item_title_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/test" />

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/ic_openclasss_vedio_start"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tv_openclass_start_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openclass_item_vedio_count_hint"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:layout_margin="@dimen/dp_10"/>

        <TextView
            android:id="@+id/tv_openclass_vedio_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openclass_item_vedio_time_hint"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dp_10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_hint"
            android:textColor="@color/font_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/information_item_time"
            android:textColor="@color/black" />

    </RelativeLayout>

</LinearLayout>