<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="@dimen/dp_10"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_daily_part1_class_performance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/dialy_part2_class_performance"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_14" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialy_part2_class_performance_hand_num_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_12" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dialy_part1_class_performance_hand_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialy_part2_class_performance_hand_num"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_12" />

            <TextView
                android:id="@+id/tv_dialy_part1_class_performance_hand_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialy_part2_class_performance_hand_percent"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_12" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialy_part2_class_performance_focus_time_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_12" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:orientation="vertical">

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="match_parent"
                android:layout_height="20dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="66"
                android:max="100"/>

            <TextView
                android:id="@+id/tv_dialy_part1_class_performance_focus_time_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/dialy_part2_class_performance_focus_time_percent"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_12" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialy_part2_class_performance_happy_index_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:id="@+id/tv_dialy_part1_class_performance_happy_index_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/dialy_part2_class_performance_hand_num"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_12" />

    </LinearLayout>

</LinearLayout>