<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/com.cnpc.complexapp"
    android:id="@+id/liner_information_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_information_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_14"
        android:text="@string/information_item_title_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal">

        <com.eaeducation.manto.weight.MoreImageView
            android:id="@+id/tv_information_item_miv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_gray"
            android:text="@string/app_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/information_item_time"
            android:textColor="@color/black"/>

    </RelativeLayout>

</LinearLayout>