<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_daily_part1_video_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialy_part3_words_teach_emphasis"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_14" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_12"
            android:textColor="@color/font_gray"
            android:text="@string/dialy_part3_words_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_12"
            android:textColor="@color/font_gray"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/dialy_part3_words_num"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_words_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>